--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abogado en Línea — Tu defensa, a un clic de distancia</title>
-  <!-- <link rel="stylesheet" href="/styles.css"> -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --azul:#0D2241; --dorado:#B8904D; --negro:#111; --texto:#1b1b1b;
-    }
-    body{
-      margin:0;
-      background:url('/public/background_marmol_gris.jpg') center/cover fixed no-repeat;
-      font-family:'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--texto);
-    }
-    header{text-align:center;padding:40px 0 10px;}
-    header img{width:180px;height:auto;}
-    h1{font-family:'Playfair Display',serif;font-size:2.2rem;letter-spacing:.5px;color:var(--azul);margin-bottom:.3rem;}
-    p.slogan{font-weight:400;color:#444;margin-top:0;font-size:1rem;letter-spacing:.4px;}
-    .btn{display:inline-block;padding:14px 22px;border:none;border-radius:10px;font-weight:600;margin:6px;cursor:pointer;font-size:1rem;}
-    .btn-gold{background:var(--dorado);color:#fff;}
-    .btn-navy{background:var(--azul);color:#fff;}
-    .btn-black{background:#000;color:#fff;}
-    section{text-align:center;background:rgba(255,255,255,0.75);margin:40px auto;width:90%;border-radius:16px;padding:30px 10px;backdrop-filter:blur(3px);}
-    footer{background:var(--negro);color:#fff;padding:25px 0;text-align:center;font-size:.95rem;border-top:4px solid var(--dorado);}
-    footer img{width:110px;opacity:.9;margin-bottom:10px;}
-    footer a{color:var(--dorado);text-decoration:none;}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Abogado en Línea — Tu defensa, a un clic de distancia</title>
+<!-- <link rel="stylesheet" href="/styles.css"> -->
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<style>
+  :root{
+    --azul:#0D2241; --dorado:#B8904D; --negro:#111; --texto:#1b1b1b;
+  }
+  body{
+    margin:0;
+    background:url('/background_marmol_gris.jpg') center/cover fixed no-repeat;
+    font-family:'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    color:var(--texto);
+  }
+  header{text-align:center;padding:40px 0 10px;}
+  header img{width:180px;height:auto;}
+  h1{font-family:'Playfair Display',serif;font-size:2.2rem;letter-spacing:.5px;color:var(--azul);margin-bottom:.3rem;}
+  p.slogan{font-weight:400;color:#444;margin-top:0;font-size:1rem;letter-spacing:.4px;}
+  .btn{display:inline-block;padding:14px 22px;border:none;border-radius:10px;font-weight:600;margin:6px;cursor:pointer;font-size:1rem;}
+  .btn-gold{background:var(--dorado);color:#fff;}
+  .btn-navy{background:var(--azul);color:#fff;}
+  .btn-black{background:#000;color:#fff;}
+  section{text-align:center;background:rgba(255,255,255,0.75);margin:40px auto;width:90%;border-radius:16px;padding:30px 10px;backdrop-filter:blur(3px);}
+  footer{background:var(--negro);color:#fff;padding:25px 0;text-align:center;font-size:.95rem;border-top:4px solid var(--dorado);}
+  footer img{width:110px;opacity:.9;margin-bottom:10px;}
+  footer a{color:var(--dorado);text-decoration:none;}
+</style>
 </head>
 <body>
   <div style="background:#B8904D;color:white;text-align:center;padding:8px;font-weight:600">
     🎉 Consulta legal gratuita por videollamada durante noviembre.
   </div>
-  <header><img src="/public/logo_azul_dorado.png" alt="Abogado en Línea"></header>
+  <header><img src="/logo_azul_dorado.png" alt="Abogado en Línea"></header>
   <main>
     <section>
       <h1>ABOGADO EN LÍNEA</h1>
