--- a/intranet/panel.html
+++ b/intranet/panel.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Seguimiento de Causa</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header>
-<img src="/public/logo_azul_dorado.png" alt="">
-<h1>Seguimiento de Causa</h1>
-<p id="subtitle">Cargando...</p>
-</header>
-<main class="card">
-<div class="tabs">
-<button class="btn btn-navy" data-tab="resumen">Resumen</button>
-<button class="btn btn-gold" data-tab="docs">Documentos</button>
-<button class="btn btn-black" data-tab="msgs">Mensajes</button>
-<button class="btn" style="background:#333;color:#fff" data-tab="pay">Pagos</button>
-</div>
-<div id="panel"></div>
-</main>
-<footer>⚖️ Landaeta Abogados Firma Legal ⚖️</footer>
-<script src="panel.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>Seguimiento de Causa</title><link rel="stylesheet" href="style.css"></head><body><header><img src="/logo_azul_dorado.png" alt=""><h1>Seguimiento de Causa</h1><p id="subtitle">Cargando...</p></header><main class="card"><div class="tabs"><button class="btn btn-navy" data-tab="resumen">Resumen</button><button class="btn btn-gold" data-tab="docs">Documentos</button><button class="btn btn-black" data-tab="msgs">Mensajes</button><button class="btn" style="background:#333;color:#fff" data-tab="pay">Pagos</button></div><div id="panel"></div></main><footer>⚖️ Landaeta Abogados Firma Legal ⚖️</footer><script src="panel.js"></script></body></html>
